tdf#166922 reduce memory usage in BufferedDecompositionFlusher

which was keeping stuff alive for too long.

regression from
    commit 8a17b7f0a679ebf21bcfb425186b205d996d129b
    Author: Noel Grandin <noelgrandin@gmail.com>
    Date:   Thu Mar 13 18:37:54 2025 +0200
    tdf#131595 Improve drawinglayer flushing mechanism.

Change-Id: I82c3e11d027b22a969d2ce786a0945fea2deb6b9
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/186389
Tested-by: Jenkins
Reviewed-by: Noel Grandin <noel.grandin@collabora.co.uk>
(cherry picked from commit b17e0bb5cab4484905dc72172735725bf4460e8e)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/186406
Reviewed-by: Xisco Fauli <xiscofauli@libreoffice.org>